# equity-transaction-analyzer

./: README.md  dev-requirements.txt  pyproject.toml  setup.cfg
data/raw/: example_alternative_data
pitch_volume_analysis/core/: analyzer.py  main.py  symbol_analyzer.py
pitch_volume_analysis/tests/: test_analyzer.py  test_main.py  test_symbol_analyzer.py
