[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pitch_volume_analysis"
version = "1.0.0"
description = "Reads PITCH data from standard input and shows a table of the top ten symbols by executed volume."
authors = [{ name = "pat8901"}]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPLV3 License",
]
requires-python = "~=3.10"

dependencies = ["isort", "pip", "pytest", "tuna"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
# [tool.ruff.lint.isort]
# known_first_party = ["pitch_volume_analysis"]
# force_sort_within_sections = true

[project.scripts]
pva = "pitch_volume_analysis.core.main:main"
